samples/negative/06_include_missing.pas
program n06;
(* $I samples/negative/no_such_file.inc *)
begin
end.
